--- a/tox.ini
+++ b/tox.ini
@@ -6,5 +6,12 @@ envlist =
 deps =
    pytest
    pytest-randomly
+   pandas
+   numpy
+   src.biosim.animals
+   src.biosim.island
+   src.biosim.landscape
+   src.biosim.annual_cycle
+   src.biosum.simulation
 commands =
     pytest --randomly-seed=1
